--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <div id="game">
         <div id="stats">
-            <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
-            <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
-            <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
+            <span class="stat">XP: <span id="xpText" style="font-weight: bold; color: red;">0</span></span>
+            <span class="stat">Health: <span id="healthText" style="font-weight: bold; color: red;">100</span></span>
+            <span class="stat">Gold: <span id="goldText" style="font-weight: bold; color: red;">50</span></span>
         </div>
         <div id="controls">
             <button id="button1">Go to store</button>
