--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+
+<!-- Lynn Owen
+Dragon - Assignment -->
+
+
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./styles.css">
-    <title>RPG - Dragon Repeller</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dragon Repeller</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game">
@@ -15,16 +21,16 @@
         <div id="controls">
             <button id="button1">Go to store</button>
             <button id="button2">Go to cave</button>
-            <button id="button3">Fight dragon</button>
+            <button id="button3">Fight Dragon</button>
         </div>
         <div id="monsterStats">
-            <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
-            <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
+            <span class="stat">Monster Name: <span id="monsterName" style="font-weight: bold;"></span></span>
+            <span class="stat">Health: <span id="monsterHealth" style="font-weight: bold;"></span></span>
         </div>
         <div id="text">
             Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
