update index html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <!-- Lynn Owen
 Dragon - Assignment -->
 
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,9 +13,9 @@ Dragon - Assignment -->
 <body>
     <div id="game">
         <div id="stats">
-            <span class="stat">XP: <span id="xpText" style="font-weight: bold; color: red;">0</span></span>
-            <span class="stat">Health: <span id="healthText" style="font-weight: bold; color: red;">100</span></span>
-            <span class="stat">Gold: <span id="goldText" style="font-weight: bold; color: red;">50</span></span>
+            <span class="stat">XP: <span id="xpText" style="color: red;">0</span></span>
+            <span class="stat">Health: <span id="healthText" style="color: red;">100</span></span>
+            <span class="stat">Gold: <span id="goldText" style="color: red;">50</span></span>
         </div>
         <div id="controls">
             <button id="button1">Go to store</button>
@@ -24,8 +23,8 @@ Dragon - Assignment -->
             <button id="button3">Fight Dragon</button>
         </div>
         <div id="monsterStats">
-            <span class="stat">Monster Name: <span id="monsterName" style="font-weight: bold;"></span></span>
-            <span class="stat">Health: <span id="monsterHealth" style="font-weight: bold;"></span></span>
+            <span class="stat">Monster Name: <span id="monsterName"></span></span>
+            <span class="stat">Health: <span id="monsterHealth"></span></span>
         </div>
         <div id="text">
             Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
